<resources>
    <string name="app_name">Menzap</string>

    <string name="action_settings">Settings</string>

    <string name="menu">MENU</string>
    <string name="events">EVENTS</string>
    <string name="friends">FRIENDS</string>
    <string name="title_activity_icon_tabs">MenZap</string>
    <string name="submit">Submit</string>
    <string name="eventStart">Event starts at :</string>
    <string name="eventEnd">Event ends at :</string>
    <string name="eventLocation">Event Location :</string>
    <string name="hintDateFormat">dd/mm/yyyy</string>
    <string name="btnCreate">Create</string>
    <string name="hintLocation">Location</string>
    <string name="hintDescription">Description</string>
    <string name="hintEventName">Event Name</string>
    <string name="hintMenuName">Menu Name</string>
    <string name="hintMenuDescription">Description</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="email_id">Email Id</string>
    <string name="btnRegister">Register</string>
    <string name="name">Name</string>
    <string name="stats1">Crowd Density</string>
    <string name="stats2">Popularity Trend</string>

</resources>
